# shrink-pdfs

./: LICENSE  README.md  pyproject.toml  setup.cfg
shrink_pdfs/: run.py
